# envshield

./: .env  Cargo.toml  README.md  env.toml  justfile
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yaml
src/: error.rs  lib.rs  log.rs  main.rs  node.rs  schema.rs
test-files/invalid/: bad_reference.toml  bad_reference3.toml  bad_reference4.toml  bad_reference5.toml  bad_schema3.toml  bad_schema4.toml  bad_schema5.toml  bad_types.toml  bad_types3.toml  bad_types4.toml
test_schemas/invalid/: bad_reference2.toml  bad_schema.toml  bad_schema2.toml  bad_schema6.toml  bad_types2.toml
test_schemas/valid/: env.toml
