[package]
name = "envshield"
version = "0.0.1"
authors = ["Max Gallup <maxgallup@pm.me>"]
description = "Define a schema for your .env files."
readme = "README.md"
edition = "2024"
homepage = "https://github.com/maxgallup/envshield"
repository = "https://github.com/maxgallup/envshield"
license = "MIT OR Apache-2.0"  # Dual license is Rust standard
keywords = ["cli", "tool", "relevant", "keywords", "max-5"]
categories = ["command-line-utilities"]  # Check valid categories on crates.io

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
colored = "3.0.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
test-generator = "0.3.1"
thiserror = "2.0.17"
toml = "0.9.8"
