[package]
name = "envshield"
version = "0.0.2"
authors = ["Max Gallup <maxgallup@pm.me>"]
description = "Define a schema for your .env files."
readme = "README.md"
edition = "2024"
homepage = "https://github.com/maxgallup/envshield"
repository = "https://github.com/maxgallup/envshield"
license = "GPL-3.0-or-later "
keywords = ["cli", "env", "schema", "toml"]
categories = ["command-line-interface", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
colored = "3.0.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
test-generator = "0.3.1"
thiserror = "2.0.17"
toml = "0.9.8"
